src/main/java/com/ogm/persistance/sql/antlr/SQLGrammarParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g 2014-04-10 16:42:28

package com.ogm.persistance.sql.antlr;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class SQLGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SELECT", "DISTINCT", "INSERT", "VALUES", "UPDATE", "DELETE", "ASTERISK", "FROM", "WHERE", "IDENT", "IS", "NOT", "NULL", "IN", "OPEN", "CLOSE", "AND", "OR", "OUTER", "StringLiteral", "SYSDATE", "COUNT", "MAX", "MIN", "SUM", "AVG", "LIKE", "TO_DATE", "TO_CHAR", "TRUNC", "BETWEEN", "DOT", "EQUAL", "LT", "GT", "LTGT", "SET", "QUESTION", "INTCONS", "COMMA", "ORDER_BY", "ASC", "DESC", "GROUP_BY", "HAVING", "SCHEMA", "ATTRIBUTTE_ACCESS", "Letter", "JavaIDDigit", "NEWLINE", "WS"
    };
    public static final int EOF=-1;
    public static final int SELECT=4;
    public static final int DISTINCT=5;
    public static final int INSERT=6;
    public static final int VALUES=7;
    public static final int UPDATE=8;
    public static final int DELETE=9;
    public static final int ASTERISK=10;
    public static final int FROM=11;
    public static final int WHERE=12;
    public static final int IDENT=13;
    public static final int IS=14;
    public static final int NOT=15;
    public static final int NULL=16;
    public static final int IN=17;
    public static final int OPEN=18;
    public static final int CLOSE=19;
    public static final int AND=20;
    public static final int OR=21;
    public static final int OUTER=22;
    public static final int StringLiteral=23;
    public static final int SYSDATE=24;
    public static final int COUNT=25;
    public static final int MAX=26;
    public static final int MIN=27;
    public static final int SUM=28;
    public static final int AVG=29;
    public static final int LIKE=30;
    public static final int TO_DATE=31;
    public static final int TO_CHAR=32;
    public static final int TRUNC=33;
    public static final int BETWEEN=34;
    public static final int DOT=35;
    public static final int EQUAL=36;
    public static final int LT=37;
    public static final int GT=38;
    public static final int LTGT=39;
    public static final int SET=40;
    public static final int QUESTION=41;
    public static final int INTCONS=42;
    public static final int COMMA=43;
    public static final int ORDER_BY=44;
    public static final int ASC=45;
    public static final int DESC=46;
    public static final int GROUP_BY=47;
    public static final int HAVING=48;
    public static final int SCHEMA=49;
    public static final int ATTRIBUTTE_ACCESS=50;
    public static final int Letter=51;
    public static final int JavaIDDigit=52;
    public static final int NEWLINE=53;
    public static final int WS=54;

    // delegates
    // delegators


        public SQLGrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SQLGrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return SQLGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g"; }



    	private GrammarUtil grammarUtil = new GrammarUtil();
    	public GrammarUtil getGrammarUtil(){
    		return grammarUtil;
    	}
    	protected void out(String s) {
    		grammarUtil.out(s);
    	}
    	
    	protected void out(int tokenIndex) {
    		grammarUtil.out(tokenNames[tokenIndex]);
    	}
    	
    	
    	protected void out(org.antlr.runtime.Token token) {
    		grammarUtil.out(token.getText());
    	}	
    	protected void tableName(org.antlr.runtime.Token token){
    		grammarUtil.tableName(token.getText());
    	}
    	
    	protected void fieldName(org.antlr.runtime.Token token){
    		grammarUtil.fieldName(token.getText());
    	}

    	protected void attributeAccess(org.antlr.runtime.Token token){
    		grammarUtil.attributeAccess(token.getText());
    	}	

    	protected void putSchema(){
    		grammarUtil.schema();
    	}
    	
    	protected void putAlias(org.antlr.runtime.Token token){
    		grammarUtil.alias(token.getText());
    	}	



    // $ANTLR start "prog"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:54:1: prog : ( query )+ ;
    public final void prog() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:54:5: ( ( query )+ )
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:54:9: ( query )+
            {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:54:9: ( query )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==SELECT||LA1_0==INSERT||LA1_0==UPDATE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:54:9: query
            	    {
            	    pushFollow(FOLLOW_query_in_prog39);
            	    query();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
             finally {
        }
        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "query"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:56:1: query : ( selectStatement | insertStatement | updateSatement );
    public final void query() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:56:6: ( selectStatement | insertStatement | updateSatement )
            int alt2=3;
            switch ( input.LA(1) ) {
            case SELECT:
                {
                alt2=1;
                }
                break;
            case INSERT:
                {
                alt2=2;
                }
                break;
            case UPDATE:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:56:10: selectStatement
                    {
                    pushFollow(FOLLOW_selectStatement_in_query66);
                    selectStatement();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:57:10: insertStatement
                    {
                    pushFollow(FOLLOW_insertStatement_in_query77);
                    insertStatement();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:58:8: updateSatement
                    {
                    pushFollow(FOLLOW_updateSatement_in_query86);
                    updateSatement();

                    state._fsp--;


                    }
                    break;

            }
        }
             finally {
        }
        return ;
    }
    // $ANTLR end "query"


    // $ANTLR start "selectStatement"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:61:1: selectStatement : SELECT ( DISTINCT )? selectFields from ( where )? ( groupby )? ( orderby )? ( having )? ;
    public final void selectStatement() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:62:2: ( SELECT ( DISTINCT )? selectFields from ( where )? ( groupby )? ( orderby )? ( having )? )
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:62:4: SELECT ( DISTINCT )? selectFields from ( where )? ( groupby )? ( orderby )? ( having )?
            {
            match(input,SELECT,FOLLOW_SELECT_in_selectStatement100); 
             out("select "); 
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:63:4: ( DISTINCT )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==DISTINCT) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:63:5: DISTINCT
                    {
                    match(input,DISTINCT,FOLLOW_DISTINCT_in_selectStatement109); 
                    out(" distinct ");

                    }
                    break;

            }

            pushFollow(FOLLOW_selectFields_in_selectStatement119);
            selectFields();

            state._fsp--;

            pushFollow(FOLLOW_from_in_selectStatement123);
            from();

            state._fsp--;

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:66:3: ( where )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==WHERE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:66:4: where
                    {
                    pushFollow(FOLLOW_where_in_selectStatement129);
                    where();

                    state._fsp--;


                    }
                    break;

            }

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:67:3: ( groupby )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==GROUP_BY) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:67:4: groupby
                    {
                    pushFollow(FOLLOW_groupby_in_selectStatement136);
                    groupby();

                    state._fsp--;


                    }
                    break;

            }

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:68:3: ( orderby )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ORDER_BY) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:68:4: orderby
                    {
                    pushFollow(FOLLOW_orderby_in_selectStatement143);
                    orderby();

                    state._fsp--;


                    }
                    break;

            }

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:69:3: ( having )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==HAVING) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:69:4: having
                    {
                    pushFollow(FOLLOW_having_in_selectStatement150);
                    having();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
             finally {
        }
        return ;
    }
    // $ANTLR end "selectStatement"


    // $ANTLR start "insertStatement"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:73:1: insertStatement : INSERT tablename open fieldname ( comma fieldname )* close VALUES questions ;
    public final void insertStatement() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:74:2: ( INSERT tablename open fieldname ( comma fieldname )* close VALUES questions )
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:74:4: INSERT tablename open fieldname ( comma fieldname )* close VALUES questions
            {
            match(input,INSERT,FOLLOW_INSERT_in_insertStatement167); 
             out("insert into "); 
            pushFollow(FOLLOW_tablename_in_insertStatement174);
            tablename();

            state._fsp--;

            pushFollow(FOLLOW_open_in_insertStatement176);
            open();

            state._fsp--;

            pushFollow(FOLLOW_fieldname_in_insertStatement178);
            fieldname();

            state._fsp--;

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:75:28: ( comma fieldname )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==COMMA) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:75:29: comma fieldname
            	    {
            	    pushFollow(FOLLOW_comma_in_insertStatement181);
            	    comma();

            	    state._fsp--;

            	    pushFollow(FOLLOW_fieldname_in_insertStatement183);
            	    fieldname();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);

            pushFollow(FOLLOW_close_in_insertStatement187);
            close();

            state._fsp--;

            match(input,VALUES,FOLLOW_VALUES_in_insertStatement192); 
             out(" values "); 
            pushFollow(FOLLOW_questions_in_insertStatement199);
            questions();

            state._fsp--;


            }

        }
             finally {
        }
        return ;
    }
    // $ANTLR end "insertStatement"


    // $ANTLR start "updateSatement"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:80:1: updateSatement : UPDATE tablename sets ( where )? ;
    public final void updateSatement() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:81:2: ( UPDATE tablename sets ( where )? )
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:81:4: UPDATE tablename sets ( where )?
            {
            match(input,UPDATE,FOLLOW_UPDATE_in_updateSatement213); 
             out("update "); 
            pushFollow(FOLLOW_tablename_in_updateSatement220);
            tablename();

            state._fsp--;

            pushFollow(FOLLOW_sets_in_updateSatement224);
            sets();

            state._fsp--;

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:84:3: ( where )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==WHERE) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:84:4: where
                    {
                    pushFollow(FOLLOW_where_in_updateSatement229);
                    where();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
             finally {
        }
        return ;
    }
    // $ANTLR end "updateSatement"


    // $ANTLR start "deleteSatement"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:87:1: deleteSatement : DELETE tablename ( where )? ;
    public final void deleteSatement() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:88:2: ( DELETE tablename ( where )? )
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:88:4: DELETE tablename ( where )?
            {
            match(input,DELETE,FOLLOW_DELETE_in_deleteSatement242); 
             out("delete from "); 
            pushFollow(FOLLOW_tablename_in_deleteSatement249);
            tablename();

            state._fsp--;

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:90:3: ( where )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==WHERE) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:90:4: where
                    {
                    pushFollow(FOLLOW_where_in_deleteSatement254);
                    where();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
             finally {
        }
        return ;
    }
    // $ANTLR end "deleteSatement"


    // $ANTLR start "selectFields"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:93:1: selectFields : selectFieldDef ( comma selectFieldDef )* ;
    public final void selectFields() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:94:2: ( selectFieldDef ( comma selectFieldDef )* )
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:95:3: selectFieldDef ( comma selectFieldDef )*
            {
            pushFollow(FOLLOW_selectFieldDef_in_selectFields273);
            selectFieldDef();

            state._fsp--;

            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:95:18: ( comma selectFieldDef )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==COMMA) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:95:19: comma selectFieldDef
            	    {
            	    pushFollow(FOLLOW_comma_in_selectFields276);
            	    comma();

            	    state._fsp--;

            	    pushFollow(FOLLOW_selectFieldDef_in_selectFields278);
            	    selectFieldDef();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            }

        }
             finally {
        }
        return ;
    }
    // $ANTLR end "selectFields"


    // $ANTLR start "selectFieldDef"
    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:101:1: selectFieldDef : ( ( tablename dot )? ( fieldname | ASTERISK ) ( alias )* | function ( comma selectFieldDef )* );
    public final void selectFieldDef() throws RecognitionException {
        try {
            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:2: ( ( tablename dot )? ( fieldname | ASTERISK ) ( alias )* | function ( comma selectFieldDef )* )
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==ASTERISK||LA16_0==IDENT||LA16_0==SCHEMA) ) {
                alt16=1;
            }
            else if ( ((LA16_0>=COUNT && LA16_0<=TRUNC)) ) {
                alt16=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 16, 0, input);

                throw nvae;
            }
            switch (alt16) {
                case 1 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:5: ( tablename dot )? ( fieldname | ASTERISK ) ( alias )*
                    {
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:5: ( tablename dot )?
                    int alt12=2;
                    int LA12_0 = input.LA(1);

                    if ( (LA12_0==SCHEMA) ) {
                        alt12=1;
                    }
                    else if ( (LA12_0==IDENT) ) {
                        int LA12_2 = input.LA(2);

                        if ( (LA12_2==DOT) ) {
                            alt12=1;
                        }
                    }
                    switch (alt12) {
                        case 1 :
                            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:6: tablename dot
                            {
                            pushFollow(FOLLOW_tablename_in_selectFieldDef313);
                            tablename();

                            state._fsp--;

                            pushFollow(FOLLOW_dot_in_selectFieldDef315);
                            dot();

                            state._fsp--;


                            }
                            break;

                    }

                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:22: ( fieldname | ASTERISK )
                    int alt13=2;
                    int LA13_0 = input.LA(1);

                    if ( (LA13_0==IDENT) ) {
                        alt13=1;
                    }
                    else if ( (LA13_0==ASTERISK) ) {
                        alt13=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 13, 0, input);

                        throw nvae;
                    }
                    switch (alt13) {
                        case 1 :
                            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:23: fieldname
                            {
                            pushFollow(FOLLOW_fieldname_in_selectFieldDef320);
                            fieldname();

                            state._fsp--;


                            }
                            break;
                        case 2 :
                            // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:33: ASTERISK
                            {
                            match(input,ASTERISK,FOLLOW_ASTERISK_in_selectFieldDef322); 
                             out("*"); 

                            }
                            break;

                    }

                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:57: ( alias )*
                    loop14:
                    do {
                        int alt14=2;
                        int LA14_0 = input.LA(1);

                        if ( (LA14_0==IDENT) ) {
                            alt14=1;
                        }


                        switch (alt14) {
                    	case 1 :
                    	    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:102:58: alias
                    	    {
                    	    pushFollow(FOLLOW_alias_in_selectFieldDef328);
                    	    alias();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop14;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // D:\\entornotrabajo\\workspace-sgo\\persistance\\src\\main\\java\\es\\caser\\persistance\\sql\\antlr\\SQLGrammar.g:103:5: function ( comma selectFieldDef )*
                    {
                    pushFollow(FOLLOW_function_in_selectFieldDef336);
